# EDMLib

./: .gitignore  .gitlab-ci.yml  DEV_README.md  Makefile  README.md  Untitled.ipynb  Untitled1.ipynb  new_test.json  pyproject.toml  pytest.ini  test_new_parser.ipynb
.devcontainer/: compose.yml  devcontainer.json
.github/workflows/: publish-to-pypi.yml
.virtual_documents/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb
conversion/: convert.py  convert_edm.py  test.py
conversion/output/mmnoe/: record_0.json
deploy/: ci-template.yml
edm_python/: __init__.py
edm_python/edm/: __init__.py  base.py  enums.py  exceptions.py  record.py  tests.py  types.py  value_types.py
edm_python/edm/classes/: context.py  core.py  service.py
edm_python/edm/examples/: create_example_xml.py
edm_python/edm/examples/xml/: example_rec_1.xml  example_rec_10.xml  example_rec_11.xml  example_rec_12.xml  example_rec_13.xml  example_rec_14.xml  example_rec_15.xml  example_rec_16.xml  example_rec_17.xml  example_rec_18.xml  example_rec_19.xml  example_rec_2.xml  example_rec_20.xml  example_rec_3.xml  example_rec_4.xml  example_rec_5.xml  example_rec_6.xml  example_rec_7.xml  example_rec_8.xml  example_rec_9.xml  rec_0.xml  rec_7.xml  rec_8.xml
edm_python/edm/serializers/: graph_serializer.py
edm_python/edm/tests/: generic_tests.py  ore_aggregation.py  record.py  uri.py  uri_ref.py
edm_python/edm/tests/fixtures/: core.py  parser.py  record.py
edm_python/edm/validation/: json_validation.py  uri.py
edm_python/logger/: logger.py
edm_python/oai/: about.py  provenance.py  record.py
edm_python/orig/: original.py
edm_python/parsers/: __init__.py  edm_xml.py  manual_test.py  processing.py  restored_1.json  restored_graph.ttl  schema.json  test_1.json  tests.py
edm_python/serializers/: framed_json_ld.py
edm_python_build/: create_python_classes.py  create_tables.py  create_xsd_enum.py  fetch_types.py  service_property_structs.py
edm_python_build/data/edm_tables/: cc_License.xlsx  edm_Agent.xlsx  edm_Place.xlsx  edm_ProvidedCHO.xlsx  edm_TimeSpan.xlsx  edm_WebResource.xlsx  ore_Aggregation.xlsx  skos_Concept.xlsx
edm_python_build/data/new_tables/2024-01-14_19:37/: cc_License.xlsx  edm_Agent.xlsx  edm_Place.xlsx  edm_ProvidedCHO.xlsx  edm_TimeSpan.xlsx  edm_WebResource.xlsx  ore_Aggregation.xlsx  skos_Concept.xlsx
edm_python_build/data/new_tables/2024-01-14_19:47/: cc_License.xlsx  edm_Agent.xlsx  edm_Place.xlsx  edm_ProvidedCHO.xlsx  edm_TimeSpan.xlsx  edm_WebResource.xlsx  ore_Aggregation.xlsx  skos_Concept.xlsx
edm_python_build/data/new_tables/2024-01-15_13:25/: cc_License.xlsx  edm_Agent.xlsx  edm_Place.xlsx  edm_ProvidedCHO.xlsx  edm_TimeSpan.xlsx  edm_WebResource.xlsx  ore_Aggregation.xlsx  skos_Concept.xlsx
edm_python_build/jinja_templates/: class_init.jinja  edm_class.jinja  xsd_enum.jinja
edmlib/: __init__.py
edmlib/edm/: base.py  edm_jsonld_frame.jsonld  enums.py  record.py  value_types.py
edmlib/edm/classes/: __init__.py  context.py  core.py
edmlib/edm/tests/: edm_provided_cho.py  generic_tests.py  record.py  uri.py  uri_ref.py
edmlib/edm/tests/fixtures/: record.py  uri.py
edmlib/edm/validation/: edm_rights.py  uri.py
edmlib/parser/: __init__.py  edm_xml.py  manual_test.py  test_1.json
edmlib/parser/xml/: rec_1.xml  rec_2.xml  rec_3.xml  rec_4.xml  rec_5.xml  rec_6.xml
edmlib_extensions/: processing.py
edmlib_extensions/oai/: about.py  header.py  record.py
edmlib_extensions/orig/: original.py
examples/: full.json  full.xml  invalid.xml  minimal.json  minimal.xml  parse_jsonld.py  parse_rdf_xml.py  serialize_to_json_ld.py  validate.py
scripts/: apidocs.py  frame.html.jinja2  module.html.jinja2
tests/: conftest.py  test_edm_classes.py  test_generic_tests.py  test_parser.py  test_parser_owl_sameas.py  test_record.py  test_rights.py  test_uri.py  test_validation.py  test_value_types.py
tests/edm/: conftest.py  record-input-data.json  test_aggregation_uri_validation.py  test_edm_classes.py  test_edm_providedCHO.py  test_generic_tests.py  test_record.py  test_rights.py  test_uri.py  test_uri_ref.py  web-resource-input-data.json
tests/edm/conftest-files/: cho-id-mismatch.json  cho-id-missmatch.json
tests/examples/ttl/: output.ttl
tests/files/: xml-string.xml
tests/fixtures/: context.py  parser.py  record.py  service.py  uri.py
tests/parser/: conftest.py  minimal-edm-with-owlsameas.xml  test_aggregation_uri_validation.py  test_parser.py  test_parser_owl_sameas.py  test_rights.py  test_xml_to_py_to_rdf.py
tests/parser/conftest-files/: record-with-https-edm-rights.xml  record-with-missing-edm-rights.xml  xml-with-empy-description-and-invalid-ref.xml  xml-with-gyear.xml  xml-with-xsdtypes.xml
tests/parser/files/: edm-record_basic.xml  ref-lit-xml.xml  xml-with-empty-description.xml  xml-with-lang-in-edm-types.xml
tests/parser/functional/: manual_test.py  restored_1.json  restored_graph.ttl  schema.json  test_1.json  tests.py
tests/parser/functional/xml/: rec_0.xml  rec_1.xml  rec_10.xml  rec_2.xml  rec_3.xml  rec_4.xml  rec_5.xml  rec_6.xml  rec_7.xml  rec_8.xml  rec_9.xml
