[tool.poetry]
name = "edmlib"
# handled via git tags:
version = "0.0.0"
description = "Python utilities for working with the EDM (Europeana Data Model). Maps all EDM-classes and properties to pydantic models and attributes."
authors = ["Gregor Pirgie <gregor.pirgie@nhm-wien.ac.at>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "./edmlib" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
rdflib = "^7.0.0"
lxml = "^5.1.0"
pydantic = "^2.10.3"
pyld = "^2.0.3"
requests = "^2.32.3"
pdoc = "^15.0.4"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
jupyter-server = "^2.12.5"
jupyterlab = "^4.1.1"
black = "^24.8.0"
pytest = "^8.1.1"
polyfactory = "^2.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>[0-9]+[.][0-9]+[.][0-9]+)$"

[tool.poetry.scripts]
update-api-docs = "scripts.apidocs:main"